--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,20 @@ vignettes/*.pdf
 .httr-oauth
 
 # knitr and R markdown default cache directories
+/*_cache/
+/cache/
+
+# Temporary files created by R markdown
+*.utf8.md
+*.knit.md
+
+# RStudio file with API keys
+api-keys.R
+
+# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+.httr-oauth
+
+# knitr and R markdown default cache directories
 *_cache/
 /cache/
 
@@ -35,5 +49,3 @@ vignettes/*.pdf
 *.utf8.md
 *.knit.md
 
-# R Environment Variables
-.Renviron
